--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "modules",
+  "name": "movie-rocket-team",
   "version": "0.1.0",
   "devDependencies": {
+    "browserify": "^13.0.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-jshint": "^0.11.2",
@@ -9,7 +10,12 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "matchdep": "^0.3.0",
-    "grunt-browserify": "^5.0.0"
+    "grunt-browserify": "^5.0.0",
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.7.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "matchdep": "^0.3.0"
   },
    "dependencies": {
     "firebase": "^3.3.0",
